WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99723
[EFL][WK2] Compilation warning in GraphicsContext3DPrivate.cpp when AC is enabled
https://bugs.webkit.org/show_bug.cgi?id=99723
Summary
[EFL][WK2] Compilation warning in GraphicsContext3DPrivate.cpp when AC is ena...
Sudarsana Nagineni (babu)
Reported
2012-10-18 08:23:20 PDT
Noticed the following compilation warning in GraphicsContext3DPrivate.cpp when AC is enabled. Source/WebCore/platform/graphics/efl/GraphicsContext3DPrivate.cpp: In member function 'bool WebCore::GraphicsContext3DPrivate::createSurface(PageClientEfl*, bool)': Source/WebCore/platform/graphics/efl/GraphicsContext3DPrivate.cpp:126:5: warning: missing initializer for member '_Evas_GL_Config::multisample_bits' [-Wmissing-field-initializers]
Attachments
Patch
(1.51 KB, patch)
2012-10-18 08:32 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-10-18 08:32:22 PDT
Created
attachment 169419
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-23 00:26:38 PDT
Comment on
attachment 169419
[details]
Patch Clearing flags on attachment: 169419 Committed
r132184
: <
http://trac.webkit.org/changeset/132184
>
WebKit Review Bot
Comment 3
2012-10-23 00:26:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug