[EFL][WK2] Compilation warning in GraphicsContext3DPrivate.cpp when AC is enabled https://bugs.webkit.org/show_bug.cgi?id=99723

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-10-23
Reviewed by Kenneth Rohde Christiansen.

Fix compilation warning in GraphicsContext3DPrivate.cpp when AC is
enabled.

No new tests, no change in behavior.

* platform/graphics/efl/GraphicsContext3DPrivate.cpp:
(WebCore::GraphicsContext3DPrivate::createSurface):

Canonical link: https://commits.webkit.org/118104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132184 268f45cc-cd09-0410-ab3c-d52691b4dbfc